docs(lance): separate runtime fixes from authentication documentation